--- a/template/tox.ini
+++ b/template/tox.ini
@@ -1,18 +1,34 @@
 [tox]
 downloadcache = {toxworkdir}/_download/
-envlist = py26-trunk,py26-1.4.X,py26-1.3.X
+envlist = py32-1.7.X,py27-1.7.X,py32-1.6.X,py27-1.6.X,py32-1.5.X,py27-1.5.X,py27-1.4.X
 
 [testenv]
 commands = {envpython} runtests.py
 
-[testenv:py26-trunk]
-basepython = python2.6
-deps = https://github.com/django/django/zipball/master
+[testenv:py32-1.7.X]
+basepython = python3.2
+deps = https://www.djangoproject.com/download/1.7a2/tarball/
 
-[testenv:py26-1.4.X]
-basepython = python2.6
+[testenv:py27-1.7.X]
+basepython = python2.7
+deps = https://www.djangoproject.com/download/1.7a2/tarball/
+
+[testenv:py32-1.6.X]
+basepython = python3.2
+deps = django>=1.6,<1.7
+
+[testenv:py27-1.6.X]
+basepython = python2.7
+deps = django>=1.6,<1.7
+
+[testenv:py32-1.5.X]
+basepython = python3.2
+deps = django>=1.5,<1.6
+
+[testenv:py27-1.5.X]
+basepython = python2.7
+deps = django>=1.5,<1.6
+
+[testenv:py27-1.4.X]
+basepython = python2.7
 deps = django>=1.4,<1.5
-
-[testenv:py26-1.3.X]
-basepython = python2.6
-deps = django>=1.3,<1.4
