--- a/template/tox.ini
+++ b/template/tox.ini
@@ -7,11 +7,11 @@ commands = {envpython} runtests.py
 
 [testenv:py32-1.7.X]
 basepython = python3.2
-deps = https://www.djangoproject.com/download/1.7a2/tarball/
+deps = https://www.djangoproject.com/download/1.7c1/tarball/
 
 [testenv:py27-1.7.X]
 basepython = python2.7
-deps = https://www.djangoproject.com/download/1.7a2/tarball/
+deps = https://www.djangoproject.com/download/1.7c1/tarball/
 
 [testenv:py32-1.6.X]
 basepython = python3.2
